[workspace]
members = [
    "crates/primitives",
    "crates/interpreter",
    "crates/dynamic_host_macro",
]
resolver = "2"
default-members = ["crates/interpreter"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
debug = true

[profile.ethtests]
inherits = "test"
opt-level = 3
